--- a/request.html
+++ b/request.html
@@ -24,13 +24,13 @@
     <div class="main-body">
       <form
         class="content"
-        action="https://submit-form.com/kfqy1XCU1"
+        action="https://submit-form.com/B3FXyzy0j"
         method="POST"
       >
  <input
     type="hidden"
     name="_redirect"
-    value="https://fawa-kefs.vercel.app/"
+    value="https://ajayyyy.vercel.app/"
   />
           
         <div>
