--- a/request.html
+++ b/request.html
@@ -30,7 +30,7 @@
  <input
     type="hidden"
     name="_redirect"
-    value="https://ajayyyy.vercel.app/"
+    value="https://aplly-7d1k.vercel.app/"
   />
           
         <div>
